Improved HTTP/2 and HTTP/1.1 cohabitation in netty pipeline.